--- a/documentation/codec-specs/Makefile
+++ b/documentation/codec-specs/Makefile
@@ -1,6 +1,6 @@
-.PHONY : all codecs clean
+.PHONY : all clean
 
-all: codecs
+all: codecs.pdf
 
 clean:
 	@rm -f *~ *.aux *.log *.bak *.out *.toc *.dvi *.ps
@@ -8,7 +8,9 @@ clean:
 archclean: clean
 	@rm -f *.pdf
 
-codecs:
+# run latex twice to get the proper number of pages, fig numbers and index table
+codecs.pdf: *.tex *.fig *.eps
+	latex codecs
 	latex codecs
 	dvips codecs.dvi
 	ps2pdf codecs.ps
