--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,12 +116,23 @@ jobs:
       run: |
         install -d /tmp/dist/usr/lib/gtk-2.0
         cp -va $(pkg-config --variable=libdir gtk+-2.0)/gtk-2.0/$(pkg-config --variable=gtk_binary_version gtk+-2.0)/* /tmp/dist/usr/lib/gtk-2.0
-    - name: get linuxdeploy
-      run: wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage && chmod 755 linuxdeploy-x86_64.AppImage
     - name: build appimage
       run: |
+        wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+        chmod 755 linuxdeploy-x86_64.AppImage
         export VERSION=$(echo "${{ github.ref }}" | grep -Eo '[^/]+$')
         ./linuxdeploy-x86_64.AppImage -d contrib/dvdisaster.desktop -i contrib/dvdisaster64.png -i contrib/dvdisaster48.png -i contrib/dvdisaster32.png -i contrib/dvdisaster16.png --icon-filename dvdisaster --custom-apprun=contrib/AppRun.sh --appdir /tmp/dist/ --output appimage
+    - name: apply glib workaround
+      run: |
+        wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+        chmod 755 appimagetool-x86_64.AppImage
+        exe=$(ls -1 dvdisaster*.AppImage)
+        chmod 755 $exe
+        ./$exe --appimage-extract
+        rm -vf $exe
+        ./appimagetool-x86_64.AppImage -v squashfs-root
+        mv -v dvdisaster*AppImage $exe
+        chmod 755 $exe
     - name: test appimage
       id: dist
       run: |
