chore: update github actions to use windows-latest

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   win:
-    runs-on: windows-2016
+    runs-on: windows-latest
     strategy:
       matrix:
         arch: [x86_64, i686]
