--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   win:
-    runs-on: windows-2016
+    runs-on: windows-latest
     strategy:
       matrix:
         arch: [x86_64, i686]
